--- a/LibreSplit.csproj
+++ b/LibreSplit.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -21,6 +21,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <None Update="include/libxserverinput.so">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>libxserverinput.so</Link>
     </None>
   </ItemGroup>
 </Project>
