--- a/LibreSplit.csproj
+++ b/LibreSplit.csproj
@@ -19,9 +19,6 @@
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.10.9" />
     <PackageReference Include="AvaloniaColorPicker" Version="1.4.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <None Update="libxserverinput/libxserverinput.so">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>libxserverinput.so</Link>
-    </None>
+    <PackageReference Include="SharpHook" Version="7.0.2" />
   </ItemGroup>
 </Project>
