--- a/LibreSplit.csproj
+++ b/LibreSplit.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SharpHook" Version="7.0.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <AvaloniaResource Include="Assets/icon.png" />
+  </ItemGroup>
 </Project>
